@@ -457,6 +457,7 @@ typedef struct FB_RTLIB_CTX_ {
 	FB_FILE         fileTB[FB_MAX_FILES];
 	int             do_file_reset;
 	int             lang;
+	void          (*exit_gfxlib2)(void);
 } FB_RTLIB_CTX;
 
 extern FB_RTLIB_CTX __fb_ctx;
