@@ -22,6 +22,7 @@ Version 1.02.0
 - Some unsafe pointer assignments between ANY PTRs and non-ANY PTRs with different PTR indirection levels didn't trigger a "suspicious pointer assignment" warning (e.g. ANY PTR PTR = BYTE PTR)
 - On 64bit, all number literals with '&' suffix (LONG type) triggered a "too big" warning, even if their value was not really too big.
 - #765: insufficient precision on FLT_MAX / DBL_MAX constants in crt/limits.bi
+- gfxlib could crash on exit, if Screen[Res] was used in a global/module constructor
 
 
 Version 1.01.0
